judge: speech bubble is now invisible when no advice is displayed, further comments have been added and corrected

--- a/prototype/prioss/src/app/visualizations/all/privacy-settings-judge/settings-form/settings-form.component.less
+++ b/prototype/prioss/src/app/visualizations/all/privacy-settings-judge/settings-form/settings-form.component.less
@@ -15,6 +15,18 @@ nz-progress {
     margin-left: 15px;
     margin-right: 5px;
 }
+
+// Empty space that is displayed when no advice is currently given (Has to have same height as speech bubbles default height)
+.talk-bubble-hidden {
+  margin: 20px;
+  margin-bottom: 10px;
+  display: inline-block;
+  position: relative;
+  height: 85px;
+  visibility: hidden;
+}
+
+// Talk Bubble that is displayed when advice is given
 .talk-bubble {
 	margin: 20px;
   margin-bottom: 10px;
